// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChickenEditor component: Should render in add new mode 1`] = `
<ChickenEditorRenderer
  breed=""
  hatched=""
  name=""
  onFieldChanged={[Function]}
  onSaveForm={[Function]}
/>
`;

exports[`ChickenEditor component: Should render in edit mode 1`] = `
<ChickenEditorRenderer
  breed="Cuckoo Maran"
  hatched="2016-10-05"
  name="Chicken1"
  onFieldChanged={[Function]}
  onSaveForm={[Function]}
  photoUrl="https://firebasestorage.googleapis.com/v0/b/cluckr-prod.appspot.com/o/uploads%2Fuser%3AvEFMHqRcozMSriuqeJNKlCXnGMr2%2Fflock%3Aflock1%2F1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg?alt=media&token=029f7593-9ed3-481e-8dc6-5d3c38844180"
/>
`;
